--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "connected-react-router": "^6.9.2",
     "history": "^5.3.0",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
