--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "connected-react-router": "^6.9.2",
-    "history": "^5.3.0",
+    "history": "4.10.1",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "moment": "^2.29.2",
